# GraceFt

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  cup.toml  des.dio  log.txt
doc/: codestyle.md  guide.md  mainpage.md
doc/def/: edu.md  exp.md  mainpage.md  tips.md
doc/doxystyle/: doxy.css
doc/img/: handlekey.dio  handlemouse.dio  zindex.dio
examples/: BasicFrame.cpp  Button.cpp  CMakeLists.txt  MyWindow.cpp  demo.cpp  helloblock.cpp
export/GraceFt/: Animation.hpp  Bezier.hpp  Circle.hpp  Color.h  Ellipse.hpp  EventMonitor.h  FitCurve.hpp  Geometry.hpp  GraphInterface.h  Graphics.h  LMath.hpp  Layout.h  PenSet.h  Point.hpp  Rect.hpp  Signal.hpp  Size.hpp  System.h  Window.h
export/GraceFt/net/: Net.h
export/GraceFt/widget/: Button.h  InputBox.h  MainWindow.h  ScrollBar.h  Slider.h  UI.h
include/: Application.h  Bezier.hpp  Block.h  BlockFocus.h  BrushSet.h  Circle.hpp  Color.h  Ellipse.hpp  Elliptic.hpp  Event.h  EventMonitor.h  FitCurve.hpp  Font.h  Graphics.h  LMath.hpp  Line.hpp  Matrix.hpp  Path.h  PenSet.h  PixelMap.cpp  PixelMap.h  Point.hpp  Polygon.hpp  Rect.hpp  RoundRect.hpp  Signal.hpp  Size.hpp  TextSet.h  Texture.h  Tools.h  _private.inl
include/GraceFt/: Animation.hpp  Application.h  Bezier.hpp  Block.h  BlockFocus.h  BrushSet.h  Button.h  Channel.hpp  CheckBox.h  Circle.hpp  Color.h  ColumnLayout.h  Ellipse.hpp  Event.h  EventMonitor.h  FitCurve.hpp  Font.h  Geometry.hpp  GraphInterface.h  Graphics.h  GridLayout.h  LMath.hpp  Label.h  Layout.cpp  Layout.h  Line.hpp  MainWindow.h  Matrix.hpp  Path.h  PenSet.h  PixelMap.h  Plan.h  Point.hpp  Polygon.hpp  Radio.h  Rect.hpp  RoundRect.hpp  RowLayout.h  Signal.hpp  Size.hpp  (+7 more)
include/GraceFt/parser/: json.hpp
include/GraceFt/widget/: Button.h  Label.h  MainWindow.h  RadioBox.h  ScrollBar.h  Slider.h  UI.h
src/: Animation.cpp  Application.cpp  Block.cpp  BlockFocus.cpp  BrushSet.cpp  Button.cpp  CMakeLists.txt  CheckBox.cpp  Color.cpp  ColumnLayout.cpp  Event.cpp  Font.cpp  GraphInterface.cpp  Graphics.cpp  GridLayout.cpp  InputBox.cpp  Label.cpp  Layout.cpp  MainWindow.cpp  Net.cpp  Path.cpp  PenSet.cpp  PixelMap.cpp  Plan.cpp  Radio.cpp  RadioBox.cpp  RowLayout.cpp  ScrollBar.cpp  Slider.cpp  System.cpp  TextSet.cpp  Texture.cpp  Tools.cpp  UI.cpp  Window.cpp
tests/: Animation.cpp  Application.cpp  BrushSet.cpp  Button.cpp  CMakeLists.txt  Channel.cpp  Check.cpp  Circle.cpp  Color.cpp  ColumnLayout.cpp  Font.cpp  Graphics.cpp  GridLayout.cpp  InputBox.cpp  LMath.cpp  Line.cpp  MainWindow.cpp  Matrix.cpp  Path.cpp  Point.cpp  Radio.cpp  Rect.cpp  RowLayout.cpp  ScrollBar.cpp  Signal.cpp  Size.cpp  Slider.cpp  TextSet.cpp  UI.cpp  UICheck.cpp  UIRadio.cpp  UI_view.cpp  Union.cpp  Window.cpp  json.cpp  net_tcp_client.cpp  net_tcp_server.cpp  net_udp_client.cpp  net_udp_server.cpp
tests/net/tcp/: client.cpp  server.cpp
tests/net/udp/: client.cpp  server.cpp
